[package]
name = "rocket_bot"
version = "0.1.0"
authors = ["Matt O'Tousa <matt@mattotousa.com>"]
edition = "2018"

[dependencies]
rust-crypto = "*"
ws = "0.8.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.91"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
log = "*"
simple-logging = "*"
